# src/database/models/orders.go
@@ -3,7 +3,7 @@ package models
 import "github.com/google/uuid"
 
 type Order struct {
-	ID         uuid.UUID
-	ItemsCount int
-	PackCount  int
+	ID         uuid.UUID `json:"id"`
+	ItemsCount int       `json:"items_count"`
+	PackSetup  string    `json:"pack_setup"`
 }
